# basal-c

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/basal/: basal_line_segment.h  basal_matrix.h  basal_matrix_common.h  basal_quaternion.h  basal_rect2.h  basal_rect_utils.h  basal_size2.h  basal_size2i.h  basal_transform.h  basal_vector3.h  circle.h  collision.h  line_segment.h  lines_segment_i.h  math.h  matrix.h  matrix_common.h  quaternion.h  rect.h  rect2.h  rect2i.h  rect_utils.h  size2.h  size2i.h  transform.h  vector2.h  vector2i.h  vector3.h
src/lib/: CMakeLists.txt  basal_matrix.c  basal_quaternion.c  basal_rect_utils.c  basal_vector3.c  circle.c  line_segment.c  matrix.c  quaternion.c  rect.c  rect_utils.c  vector2.c  vector2i.c  vector3.c
src/lib/matrix/: matrix.c  matrix.h
src/lib/platform/ios/: basal_matrix_ios.c  basal_matrix_ios.h  matrix_ios.c  matrix_ios.h
src/lib/transform/: transform.c
